--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
