--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "react-intersection-observer": "^9.15.1"
+    "react-intersection-observer": "^9.15.1",
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
     "postcss": "^8",
