--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-vertical-timeline-component": "^3.5.3",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
