--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.33",
+    "@react-email/tailwind": "^1.0.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
     "next": "14.2.23",
