--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-vertical-timeline-component": "^3.5.3",
