--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.6.1",
     "@react-email/components": "^0.0.33",
     "@react-email/tailwind": "^1.0.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
+    "negotiator": "^1.0.0",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
     "resend": "^4.1.2"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
